--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ extend-ignore=
         # nested
         WPS431,
         WPS430,
+        WPS433,
         # negated
         WPS504,
         # simplifiable if
@@ -70,3 +71,7 @@ extend-ignore=
         WPS229
         # return
         WPS212
+        # password
+        S106,
+        # implicit usage
+        PS528,
