--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
 max-line-length=185
 max-local-variables=15
 max-complexity=8
-max-module-members=15
-max-line-complexity=20
+max-module-members=21
+max-line-complexity=21
 max_arguments=8
 max_expressions=15
 
@@ -12,6 +12,7 @@ extend-ignore=
         WPS306,
         # imports relative to current folder
         WPS300,
+        WPS235,
         # % string formatting
         WPS323, 
         # slash usage for line breaking (better not to)
@@ -36,6 +37,8 @@ extend-ignore=
         WPS110,
         #Infinite loop
         WPS457,
+        # static method
+        WPS602,
         # outer scope names shadowing (due to a bug),
         WPS442,
         WPS420,
@@ -53,7 +56,7 @@ extend-ignore=
         E800,
         # password
         S105,
-        # super() call
+        # super call
         WPS608,
         # an unnecessary use of a raw string
         WPS360,
