--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ extend-ignore=
         WPS317,
         # incorrect unpacking target
         WPS414,
+        WPS453,
         # multiple assign targets
         WPS429,
         # private name pattern
