--- a/setup.cfg
+++ b/setup.cfg
@@ -17,8 +17,9 @@ extend-ignore=
         WPS323, 
         # slash usage for line breaking (better not to)
         N400,
-        # dotted import
+        # import
         WPS301,
+        WPS319,
         # fstring
         WPS305,
         # multiline
@@ -63,6 +64,8 @@ extend-ignore=
         WPS360,
         # unicode name
         WPS119,
+        # module name
+        WPS102,
         # nested
         WPS431,
         WPS430,
@@ -78,6 +81,6 @@ extend-ignore=
         # password
         S106,
         # implicit usage
-        PS528,
+        WPS528,
         # indentation
         WPS318,
