--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,7 +20,7 @@ jobs:
         flake8 
         
   container-job:
-    name: Тесты
+    name: Tests
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -33,21 +33,16 @@ jobs:
           POSTGRES_HOST: 127.0.0.1
         ports:
         - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     steps:
     - uses: actions/checkout@v2
-    - name: Установка Python
+    - name: Python setup
       uses: actions/setup-python@v2
       with:
         python-version: "3.11.0"
-    - name: Установка модулей и зависимостей
+    - name: Dependencies and requirements
       run: |
         python -m pip install --upgrade pip
         pip install -r tests/requirements.txt
-    - name: Тесты
+    - name: Models tests
       run: |
         python manage.py test tests
