--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -41,6 +41,7 @@ jobs:
         python-version: "3.11.0"
     - name: Dependencies and requirements
       run: |
+        ping 127.0.0.1 -c 4
         python -m pip install --upgrade pip
         pip install -r tests/requirements.txt
     - name: Models tests
