--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -9,7 +9,7 @@ jobs:
     - name: Set up python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.11.0
+        python-version: 3.11.4
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -41,9 +41,21 @@ jobs:
         python-version: "3.11.0"
     - name: Dependencies and requirements
       run: |
-        ping 127.0.0.1 -c 4
         python -m pip install --upgrade pip
         pip install -r tests/requirements.txt
     - name: Models tests
       run: |
-        python manage.py test tests
+        chmod +x tests/test.sh
+        ./tests/test.sh tests.test_models
+    - name: Views tests
+      run: |
+        chmod +x tests/test.sh
+        ./tests/test.sh tests.test_views
+    - name: Api tests
+      run: |
+        chmod +x tests/test.sh
+        ./tests/test.sh tests.test_api
+    - name: Forms tests
+      run: |
+        chmod +x tests/test.sh
+        ./tests/test.sh tests.test_forms
